-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 25
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8362042 | 25.0.1 | Kevin Walls | P2 | Resolved | Fixed | b02 |
| JDK-8361291 | 25 | Kevin Walls | P2 | Resolved | Fixed | b30 |
# SIGSEGV (0xb) at pc=0x00007ffadc251b10, pid=2085770, tid=2085797
#
# JRE version: Java(TM) SE Runtime Environment (25.0+26) (build 25-ea+26-LTS-3358)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25-ea+26-LTS-3358, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x47bb10] AccessInternal::PostRuntimeDispatch<G1BarrierSet::AccessBarrier<286822ul, G1BarrierSet>, (AccessInternal::BarrierType)3, 286822ul>::oop_access_barrier(
oopDesc*, long)+0x0
#
Stack: [0x00007ffad82e5000,0x00007ffad83e5000], sp=0x00007ffad83e13a8, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x47bb10] AccessInternal::PostRuntimeDispatch<G1BarrierSet::AccessBarrier<286822ul, G1BarrierSet>, (AccessInternal::BarrierType)3, 286822ul>::oop_access_barrier(oopDesc*, long)+0x0 (accessBackend.hpp:228)
V [libjvm.so+0x10e1c1a] vframeStream::vframeStream(oopDesc*, Handle)+0x7a (vframe.cpp:523)
V [libjvm.so+0x1068a51] GetThreadSnapshotClosure::do_thread(Thread*)+0x7d1 (threadService.cpp:1319)
V [libjvm.so+0x106691d] ThreadSnapshotFactory::get_thread_snapshot(_jobject*, JavaThread*)+0x80d (threadService.cpp:1482)
V [libjvm.so+0xae23d5] JVM_CreateThreadSnapshot+0x75 (jvm.cpp:2966)
j jdk.internal.vm.ThreadSnapshot.create(Ljava/lang/Thread;)Ljdk/internal/vm/ThreadSnapshot;+0 java.base@25-ea
j jdk.internal.vm.ThreadSnapshot.of(Ljava/lang/Thread;)Ljdk/internal/vm/ThreadSnapshot;+1 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThread(Ljava/lang/Thread;Ljdk/internal/vm/ThreadDumper$TextWriter;)V+1 java.base@25-ea
j jdk.internal.vm.ThreadDumper.lambda$dumpThreads$0(Ljdk/internal/vm/ThreadDumper$TextWriter;Ljava/lang/Thread;)V+2 java.base@25-ea
j jdk.internal.vm.ThreadDumper$$Lambda+0x0000000086026408.accept(Ljava/lang/Object;)V+8 java.base@25-ea
j java.util.stream.StreamSpliterators$WrappingSpliterator$$Lambda+0x0000000086026848.accept(Ljava/lang/Object;)V+5 java.base@25-ea
j java.util.stream.ReferencePipeline$2$1.accept(Ljava/lang/Object;)V+18 java.base@25-ea
j java.util.Spliterators$ArraySpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+53 java.base@25-ea
j java.util.stream.AbstractPipeline.copyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)V+32 java.base@25-ea
j java.util.stream.AbstractPipeline.wrapAndCopyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Ljava/util/stream/Sink;+13 java.base@25-ea
j java.util.stream.StreamSpliterators$WrappingSpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+42 java.base@25-ea
j java.util.stream.Streams$ConcatSpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+12 java.base@25-ea
j java.util.stream.ReferencePipeline$Head.forEach(Ljava/util/function/Consumer;)V+12 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljdk/internal/vm/ThreadContainer;Ljdk/internal/vm/ThreadDumper$TextWriter;)V+10 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljdk/internal/vm/ThreadDumper$TextWriter;)V+32 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljava/io/OutputStream;)V+10 java.base@25-ea
j com.sun.management.internal.HotSpotDiagnostic.dumpThreads(Ljava/io/OutputStream;Lcom/sun/management/HotSpotDiagnosticMXBean$ThreadDumpFormat;)V+37 jdk.management@25-ea
j com.sun.management.internal.HotSpotDiagnostic.dumpThreads(Ljava/lang/String;Lcom/sun/management/HotSpotDiagnosticMXBean$ThreadDumpFormat;)V+48 jdk.management@25-ea
j DumpThreadsWithEliminatedLock.testPlainFormat()V+39
j DumpThreadsWithEliminatedLock.main([Ljava/lang/String;)V+289
j java.lang.invoke.LambdaForm$DMH+0x0000000086042000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V+10 java.base@25-ea
j java.lang.invoke.LambdaForm$MH+0x0000000086043c00.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+33 java.base@25-ea
j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+20 java.base@25-ea
j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+55 java.base@25-ea
j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@25-ea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+102 java.base@25-ea
j com.sun.javatest.regtest.agent.MainWrapper$MainTask.run()V+134
j java.lang.Thread.runWith(Ljava/lang/Object;Ljava/lang/Runnable;)V+5 java.base@25-ea
j java.lang.Thread.run()V+19 java.base@25-ea
v ~StubRoutines::call_stub 0x00007ffac3c9ffa6
V [libjvm.so+0x9effe0] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x2b0 (javaCalls.cpp:415)
V [libjvm.so+0x9f191f] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x1df (javaCalls.cpp:323)
V [libjvm.so+0xae008c] thread_entry(JavaThread*, JavaThread*)+0x8c (jvm.cpp:2748)
V [libjvm.so+0xa08df8] JavaThread::thread_main_inner() [clone .part.0]+0xb8 (javaThread.cpp:772)
V [libjvm.so+0x105ba9f] Thread::call_run()+0x9f (thread.cpp:243)
V [libjvm.so+0xe44ec6] thread_native_entry(Thread*)+0xd6 (os_linux.cpp:868)
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j jdk.internal.vm.ThreadSnapshot.create(Ljava/lang/Thread;)Ljdk/internal/vm/ThreadSnapshot;+0 java.base@25-ea
j jdk.internal.vm.ThreadSnapshot.of(Ljava/lang/Thread;)Ljdk/internal/vm/ThreadSnapshot;+1 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThread(Ljava/lang/Thread;Ljdk/internal/vm/ThreadDumper$TextWriter;)V+1 java.base@25-ea
j jdk.internal.vm.ThreadDumper.lambda$dumpThreads$0(Ljdk/internal/vm/ThreadDumper$TextWriter;Ljava/lang/Thread;)V+2 java.base@25-ea
j jdk.internal.vm.ThreadDumper$$Lambda+0x0000000086026408.accept(Ljava/lang/Object;)V+8 java.base@25-ea
j java.util.stream.StreamSpliterators$WrappingSpliterator$$Lambda+0x0000000086026848.accept(Ljava/lang/Object;)V+5 java.base@25-ea
j java.util.stream.ReferencePipeline$2$1.accept(Ljava/lang/Object;)V+18 java.base@25-ea
j java.util.Spliterators$ArraySpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+53 java.base@25-ea
j java.util.stream.AbstractPipeline.copyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)V+32 java.base@25-ea
j java.util.stream.AbstractPipeline.wrapAndCopyInto(Ljava/util/stream/Sink;Ljava/util/Spliterator;)Ljava/util/stream/Sink;+13 java.base@25-ea
j java.util.stream.StreamSpliterators$WrappingSpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+42 java.base@25-ea
j java.util.stream.Streams$ConcatSpliterator.forEachRemaining(Ljava/util/function/Consumer;)V+12 java.base@25-ea
j java.util.stream.ReferencePipeline$Head.forEach(Ljava/util/function/Consumer;)V+12 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljdk/internal/vm/ThreadContainer;Ljdk/internal/vm/ThreadDumper$TextWriter;)V+10 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljdk/internal/vm/ThreadDumper$TextWriter;)V+32 java.base@25-ea
j jdk.internal.vm.ThreadDumper.dumpThreads(Ljava/io/OutputStream;)V+10 java.base@25-ea
j com.sun.management.internal.HotSpotDiagnostic.dumpThreads(Ljava/io/OutputStream;Lcom/sun/management/HotSpotDiagnosticMXBean$ThreadDumpFormat;)V+37 jdk.management@25-ea
j com.sun.management.internal.HotSpotDiagnostic.dumpThreads(Ljava/lang/String;Lcom/sun/management/HotSpotDiagnosticMXBean$ThreadDumpFormat;)V+48 jdk.management@25-ea
j DumpThreadsWithEliminatedLock.testPlainFormat()V+39
j DumpThreadsWithEliminatedLock.main([Ljava/lang/String;)V+289
j java.lang.invoke.LambdaForm$DMH+0x0000000086042000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V+10 java.base@25-ea
j java.lang.invoke.LambdaForm$MH+0x0000000086043c00.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+33 java.base@25-ea
j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+20 java.base@25-ea
j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+55 java.base@25-ea
j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@25-ea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+102 java.base@25-ea
j com.sun.javatest.regtest.agent.MainWrapper$MainTask.run()V+134
j java.lang.Thread.runWith(Ljava/lang/Object;Ljava/lang/Runnable;)V+5 java.base@25-ea
j java.lang.Thread.run()V+19 java.base@25-ea
v ~StubRoutines::call_stub 0x00007ffac3c9ffa6
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000020
as part of jdk25 ATR testing.
The crash is observed on both linux-x64 and macosx-x64 platforms with product builds.
- backported by
-
JDK-8361291 JVM crashes in AccessInternal::PostRuntimeDispatch
-
- Resolved
-
-
JDK-8362042 JVM crashes in AccessInternal::PostRuntimeDispatch
-
- Resolved
-
- duplicates
-
JDK-8360663 assert(Universe::is_in_heap(result)) failed: object not in heap 0x0000000000000f50
-
- Closed
-
- relates to
-
JDK-8361912 ThreadsListHandle::cv_internal_thread_to_JavaThread does not deal with a virtual thread's carrier thread
-
- Resolved
-
-
JDK-8364314 java_lang_Thread::get_thread_status fails assert(base != nullptr) failed: Invalid base
-
- Closed
-
- links to
-
Commit(jdk25)
openjdk/jdk/92268e17
-
Commit(master)
openjdk/jdk/13a39278
-
Review(jdk25)
openjdk/jdk/26088
-
Review(master)
openjdk/jdk/25958