8359870: JVM crashes in AccessInternal::PostRuntimeDispatch